<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnote"
    tools:context=".UpdateNoteActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/editNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/edit_note"
        android:textColor="@color/navy"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:text="@string/saveButton"
        android:textColor="@color/black"
        android:backgroundTint="#CF510A"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editNoteHeading"
        android:layout_marginEnd="6dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/updateTitleEditText"
        android:hint="@string/enter_the_title"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@id/editNoteHeading"
        android:background="@color/beige"
        android:layout_marginTop="16dp"
        android:maxLines="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/updateContentEditText"
        android:hint="@string/enter_the_description"
        android:textColor="@color/black"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@color/beige"
        android:layout_below="@id/updateTitleEditText"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"/>


</RelativeLayout>