<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity"
    android:padding="16dp"
    android:background="@drawable/bgnote">

    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/add_note"
        android:textColor="#FA0202"
        android:textSize="24sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveButton"
        android:text="@string/saveButton"
        android:textColor="@color/black"
        android:backgroundTint="#CF510A"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/addNoteHeading"
        android:layout_marginEnd="6dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/titleEditText"
        android:hint="@string/enter_the_title"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textSize="20sp"
        android:layout_below="@id/addNoteHeading"
        android:background="@color/beige"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:fontFamily="@font/poppins"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contentEditText"
        android:hint="@string/enter_the_description"
        android:textColor="@color/black"
        android:gravity="top"
        android:padding="12dp"
        android:textSize="18sp"
        android:background="@color/beige"
        android:layout_below="@id/titleEditText"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"/>


</RelativeLayout>